--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="index.html"><h4>LAGER</h4></a>
                </div>
                <ul  class="nav__menu">
-                  <li><a href="index.html">OG</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="about.html">About</a></li>
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="contact.html">Contact</a></li>
